--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Reference</title>
-  <link rel="stylesheet" href="./table.css">
-  <script type="module" crossorigin src="/js-reference/index-ByC0tHy3.js"></script>
-  <link rel="stylesheet" crossorigin href="/js-reference/index-D3pfwHhy.css">
+  <script type="module" crossorigin src="/js-reference/index-Bc1qySyA.js"></script>
+  <link rel="stylesheet" crossorigin href="/js-reference/index-OBZz19NP.css">
 </head>
 
 <body>
@@ -20,7 +19,7 @@
       <span>by Manz.dev</span>
     </hgroup>
 
-    <input class="search input-style" type="text" placeholder="Number, String, HTMLDivElement...">
+    <input class="search input-style" type="search" placeholder="Number, String, HTMLDivElement...">
     <fieldset class="datatype-list badge-list"></fieldset>
     <div class="prototype-list badge-list"></div>
     <div class="content badge-list">
