--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JS Reference</title>
-  <script type="module" crossorigin src="/js-reference/index-Bc1qySyA.js"></script>
-  <link rel="stylesheet" crossorigin href="/js-reference/index-OBZz19NP.css">
+  <script type="module" crossorigin src="/js-reference/index-85ssLC8-.js"></script>
+  <link rel="stylesheet" crossorigin href="/js-reference/index-DBFiJWFu.css">
 </head>
 
 <body>
@@ -15,11 +15,14 @@
   <div class="container">
 
     <hgroup>
-      <h1>Referencia <span>JS</span></h1>
-      <span>by Manz.dev</span>
+      <h1>Referencia <span>JavaScript</span></h1>
+      <span>by <a href="https://manz.dev/">Manz.dev</a></span>
     </hgroup>
 
-    <input class="search input-style" type="search" placeholder="Number, String, HTMLDivElement...">
+    <search>
+      <input class="search input-style" type="search" placeholder="Number, String, HTMLDivElement...">
+      <span class="info"></span>
+    </search>
     <fieldset class="datatype-list badge-list"></fieldset>
     <div class="prototype-list badge-list"></div>
     <div class="content badge-list">
